Updated snap.js, added style to hide drawer when it is not shown (this is in addition to the z-index). Prevents any transparency in the view from showing the drawer behind it.

--- a/content/css/base.css
+++ b/content/css/base.css
@@ -33,7 +33,16 @@
     left: 0;
     right: 0;
     bottom: 0;
+    visibility: hidden;
+    display: none;
 }
+
+.snapjs-left .drawers,
+.snapjs-right .drawers {
+    visibility: visible;
+    display: block;
+}
+
 .left-drawer, .right-drawer {
     top: 0;
     left: 0;
